--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "npm": "^9.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0",
     "react-redux": "^8.0.5",
+    "react-reveal": "^1.2.2",
     "react-router-dom": "^6.6.1",
     "react-scripts": "^5.0.1",
+    "react-scroll": "^1.8.9",
     "redux": "^4.2.0",
     "sass": "^1.58.3",
     "socket.io-client": "^4.2.0",
