--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-router-dom": "^6.6.1",
     "react-scripts": "^5.0.1",
     "react-scroll": "^1.8.9",
+    "react-slick": "^0.29.0",
     "redux": "^4.2.0",
     "sass": "^1.58.3",
     "socket.io-client": "^4.2.0",
